<resources>
    <string name="app_name">Golf Scorecard</string>
    <string name="start_scoring_button_text">Start Scoring</string>
    <string name="title_activity_scoring">Scores</string>
    <string name="hole_number_text">Hole Number:</string>
    <string name="add_button_label">+</string>
    <string name="substract_button_label">-</string>
    <string name="score_label">Score</string>
    <string name="score_text">00</string>
    <string name="hole_number">0</string>
    <string name="clear_score_button">Clear Score</string>
    <string name="reset_scores_menu_title">Reset Scores</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
</resources>
